# wezterm

./: .gitignore  .jules  .pre-commit-config.yaml  .wezterm.lua  AGENTS.md  AGENT_COORDINATION.md  BUILD_ENHANCEMENTS.md  BUILD_QUICK_REFERENCE.md  CLAUDE.md  Cargo.toml  JULES.md  JUSTFILE_ENHANCEMENTS.md  Justfile  RESOURCE_COORDINATION.md  SECURITY_AUDIT.md  TODO.md  build-all.ps1  cliff.toml  codex.TODO.md  install-verification.ps1  lefthook.yml  patch_lua_3.py  patch_lua_final.py  release.toml  sgconfig.yml  test-build-enhancements.ps1  uninstall.ps1  wezterm-utils.lua
.cargo/: config.toml
.claude/: CLAUDE.md
.claude/context/: CONTEXT_INDEX.json  LATEST_CONTEXT.md  context-index.json  quick-context.md  wezterm-context-2026-02-04-build-enhancements.md  wezterm-context-2026-02-04-module-framework.md  wezterm-context-2026-02-04-phase0-complete.md  wezterm-context-2026-02-04.md  wezterm-context-20260204-gix.md  wezterm-context-20260204-phase5-tests.md  wezterm-context-20260204-testing-complete.md  wezterm-context-20260204.md  wezterm-context-20260330-integration.md
.claude/plans/: custom-modules-test-plan.md  wezterm-customization-plan.md
.github/workflows/: windows-ci.yml
async_ossl/src/: lib.rs
async_rustls/: Cargo.toml
async_rustls/src/: client.rs  lib.rs  server.rs  stream.rs  verifier.rs
async_rustls/tests/: integration_tests.rs
bidi/src/: lib.rs
codec/src/: lib.rs
codex_ui/: chrome.lua  palette.lua  panels.lua  prefs.lua  schemes.lua  shared.lua  validator.lua
color-types/src/: lib.rs
config/src/: background.rs  bell.rs  color.rs  config.rs  font.rs  frontend.rs  keyassignment.rs  keys.rs  lib.rs  lib_test.rs  lua.rs  ssh.rs  units.rs  wsl.rs
config/wezterm/: EMBEDDED_DEV_KEYBINDINGS.md  EMBEDDED_DEV_SETUP.md  INSTALLATION-VERIFICATION.md  QUICK-REFERENCE.md  UI_STUDIO_WIREFRAMES.md  WEZTERM-CONFIG-ARCHITECTURE.md  WEZTERM-UTILS-EXAMPLES.md  WEZTERM-UTILS-README.md  WEZTERM-UTILS-SUMMARY.md  WEZTERM-UTILS-TROUBLESHOOTING.md  embedded-dev-config.lua  embedded-dev-helpers.sh  setup-embedded-dev.sh  test-wezterm-utils.lua  ui-preferences.lua
docs/: WEZTERM_ADVANCED_FEATURES_SUMMARY.md  WEZTERM_CONFIG_GUIDE.md  WEZTERM_QUICK_REFERENCE.md
docs/design/: README.md
docs/optimization/: WEZTERM_OPTIMIZATION_SUMMARY.md  wezterm-optimization-report.md
docs/plans/: 2026-03-23-wezterm-joint-plan.md  2026-03-23-wezterm-ux-redesign.md  README.md  custom-modules-test-plan.md
docs/specs/: 2026-03-23-wezterm-ux-redesign-design.md  README.md
env-bootstrap/src/: lib.rs  ringlog.rs
filedescriptor/src/: windows.rs
lfucache/src/: lib.rs
lua-api-crates/plugin/: Cargo.toml
luahelper/src/: enumctor.rs  lib.rs
mux/src/: connui.rs  domain.rs  lib.rs  localpane.rs  ssh.rs  ssh_agent.rs  tab.rs  termwiztermtab.rs  tmux_commands.rs  tmux_pty.rs
procinfo/src/: windows.rs
pty/src/: cmdbuilder.rs  lib.rs
scripts/: run-functional-tests.ps1  run-wezterm-optimization.ps1  wezterm-performance-profiler.ps1
scripts/build-optimize/: Cargo.toml  build-optimized.ps1
termwiz/: Cargo.toml
tools/: BUILD-INTEGRATION.md  BUILD-TOOLS-SUMMARY.md  Build-Integration.ps1  Invoke-Gix.Examples.ps1  Invoke-Gix.ps1  README.md  Symlink-WezTermHomeConfig.ps1  Test-Integration.ps1  Test-InvokeGix.ps1  Test-PostBuild.ps1  integration-example.ps1  test-daemon-ipc.ps1  test-gui-launch.ps1  test-pipe-manual.ps1
vtparse/src/: lib.rs
wezterm/: Cargo.toml
wezterm-benchmarks/: Cargo.toml  PERFORMANCE_TUNING_GUIDE.md
wezterm-benchmarks/benches/: file_operations.rs  git_operations.rs  ipc_latency.rs  memory_usage.rs  startup_time.rs
wezterm-benchmarks/src/: fs.rs  git.rs  ipc.rs  lib.rs  memory.rs  monitoring.rs  startup.rs
wezterm-client/: Cargo.toml
wezterm-fs-explorer/: Cargo.toml  README.md
wezterm-fs-explorer/examples/: path_translation.rs  shell_demo.rs  wezterm-config-example.lua
wezterm-fs-explorer/src/: app.rs  error.rs  file_entry.rs  git_status.rs  icons.rs  ipc.rs  ipc_client.rs  keybindings.rs  lib.rs  main.rs  operations.rs  path_utils.rs  search.rs  shell.rs  ui.rs
wezterm-fs-explorer/tests/: e2e.rs  integration.rs
wezterm-fs-utils/: Cargo.toml
wezterm-fs-utils/src/: lib.rs  search.rs  walker.rs  watcher.rs
wezterm-gui/: Cargo.toml  build.rs
wezterm-module-framework/: Cargo.toml
wezterm-module-framework/src/: context.rs  ipc.rs  lib.rs  panels.rs  registry.rs  startup.rs  status_bar.rs  validation.rs
wezterm-module-framework/src/modules/: hello.rs  mod.rs
wezterm-module-framework/src/modules/fs_explorer/: README.md  mod.rs  pane.rs
wezterm-module-framework/src/modules/watcher/: mod.rs
wezterm-mux-server/: Cargo.toml
wezterm-mux-server-impl/: Cargo.toml
wezterm-mux-server-impl/src/: dispatch.rs  lib.rs  sessionhandler.rs
wezterm-mux-server/src/: main.rs  tls.rs
wezterm-ssh/: Cargo.toml
wezterm-ssh/src/: auth.rs  channelwrap.rs  config.rs  dirwrap.rs  filewrap.rs  host.rs  lib.rs  sessioninner.rs  sessionwrap.rs  sftpwrap.rs
wezterm-ssh/src/russh_backend/: channel.rs  handler.rs  mod.rs  session.rs  sftp.rs  tests.rs
wezterm-ssh/src/sftp/: dir.rs  file.rs
wezterm-ssh/tests/: docker_ssh_test.rs  russh_functional.rs  russh_integration.rs  ssh_config_functional.rs
wezterm-utils/: config.lua  events.lua  init.lua  ipc.lua  launcher.lua  state.lua
wezterm-utils-daemon/: BUILD_VERIFICATION.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  build.ps1  wezterm-utils-daemon.toml
wezterm-utils-daemon/.cargo/: config.toml
wezterm-utils-daemon/benches/: latency_benchmark.rs
wezterm-utils-daemon/examples/: mock_client.rs
wezterm-utils-daemon/src/: client.rs  config.rs  connections.rs  error.rs  lib.rs  main.rs  protocol.rs  router.rs  server.rs
wezterm-utils-daemon/tests/: integration_test.rs
wezterm-version/: build.rs
wezterm-watch/: Cargo.toml  README.md  wezterm-integration.lua
wezterm-watch/src/: git.rs  lib.rs  main.rs  output.rs  watcher.rs
wezterm-watch/tests/: README.md  e2e.rs  integration.rs
wezterm/src/: daemon_cmd.rs  explore_cmd.rs  main.rs  validate_config.rs  watch_cmd.rs
(+123 files in other folders)
