[package]
name = "wezterm-benchmarks"
version = "0.1.0"
edition = "2021"
authors = ["David Martel"]
description = "Performance benchmarking and optimization suite for WezTerm utilities"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
futures = "0.3"
dashmap = "6.1"
parking_lot = "0.12"
uuid = { version = "1.11", features = ["v4", "serde"] }
once_cell = "1.20"
object-pool = "0.5"
bytes = "1.8"
rmp-serde = "1.3"  # MessagePack for efficient serialization
lz4 = "1.28"  # Fast compression
memmap2 = "0.9"  # Memory-mapped I/O
rayon = "1.10"  # Parallel processing
crossbeam-channel = "0.5"
num_cpus = "1.16"
systemstat = "0.2"  # System resource monitoring
prometheus = "0.13"  # Metrics collection
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tempfile = "3.14"
walkdir = "2.5"
git2 = "0.19"
cached = "0.54"  # Caching framework
lru = "0.12"  # LRU cache
ahash = "0.8"  # Fast hashing
mimalloc = { version = "0.1", default-features = false }  # Better memory allocator

# Windows specific
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Performance",
    "Win32_System_ProcessStatus",
] }

[dev-dependencies]
proptest = "1.5"
rand = "0.8"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
debug = true  # Keep debug symbols for profiling

[profile.bench]
inherits = "release"

[[bench]]
name = "ipc_latency"
harness = false

[[bench]]
name = "file_operations"
harness = false

[[bench]]
name = "git_operations"
harness = false

[[bench]]
name = "memory_usage"
harness = false

[[bench]]
name = "startup_time"
harness = false

[[bin]]
name = "perf-monitor"
path = "src/bin/perf_monitor.rs"

[[bin]]
name = "stress-test"
path = "src/bin/stress_test.rs"