[workspace]

[package]
name = "wezterm-fs-explorer"
version = "0.1.0"
edition = "2021"
authors = ["David Martel <david@example.com>"]
description = "High-performance filesystem explorer for WezTerm"
license = "MIT"
repository = "https://github.com/wez/wezterm"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-fmt = "tgz"

[lib]
name = "wezterm_fs_explorer"
path = "src/lib.rs"

[[bin]]
name = "wezterm-fs-explorer"
path = "src/main.rs"

[dependencies]
# Terminal UI
crossterm = "0.27"
ratatui = "0.26"

# Filesystem operations
notify = "6.1"
walkdir = "2.4"

# Git integration (pure Rust - no native library dependencies)
gix = { version = "0.68", default-features = false, features = ["status", "dirwalk"] }

# Performance
rayon = "1.10"

# Utilities
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-width = "0.1"
which = "6.0"
nucleo = "0.5"
futures = "0.3"

# IPC and async support
tokio = { version = "1.35", features = ["sync", "rt", "rt-multi-thread", "macros", "io-util", "net", "time"] }
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"

[target.'cfg(windows)'.dependencies]
uds_windows = "1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "unwind"

[profile.release-fast]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
walkdir = "2.4"
futures = "0.3"
