[package]
name = "wezterm-fs-explorer"
version = "0.1.0"
edition = "2021"
authors = ["David Martel <david@example.com>"]
description = "High-performance filesystem explorer for WezTerm"
license = "MIT"
repository = "https://github.com/wez/wezterm"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-fmt = "tgz"

[lib]
name = "wezterm_fs_explorer"
path = "src/lib.rs"

[[bin]]
name = "wezterm-fs-explorer"
path = "src/main.rs"

[dependencies]
# Terminal UI (fs-explorer-specific, not used elsewhere in workspace)
crossterm = "0.27"
ratatui = "0.26"

# Filesystem operations
walkdir.workspace = true

# Git integration — pinned to 0.68 to match wezterm-watch and wezterm-fs-utils;
# migrate to workspace gix (0.78) when those crates are upgraded.
gix = { version = "0.68", default-features = false, features = ["status", "dirwalk"] }

# Performance
rayon.workspace = true

# Utilities
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
unicode-width = "0.1"
which = "6.0"
nucleo = "0.5"
futures.workspace = true

# IPC and async support
tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread", "macros", "io-util", "net", "time"] }
clap.workspace = true
log.workspace = true
env_logger.workspace = true

[target.'cfg(windows)'.dependencies]
uds_windows.workspace = true

[dev-dependencies]
tempfile.workspace = true
assert_cmd = "2.0"
predicates.workspace = true
walkdir.workspace = true
futures.workspace = true
