[package]
name = "wezterm-fs-utils"
version = "0.1.0"
edition = "2021"
authors = ["David Martel"]
description = "Consolidated filesystem utilities for WezTerm modules"
license = "MIT"
repository = "https://github.com/wez/wezterm"

[dependencies]
# Filesystem operations (ignore provides .gitignore-aware walking)
ignore = "0.4"
# Use notify 6.x to match notify-debouncer-full requirements
notify = "6.1"
notify-debouncer-full = "0.3"

# Fuzzy search (same as wezterm-fs-explorer)
nucleo-matcher = { workspace = true }

# Git integration (pure Rust)
gix = { version = "0.68", default-features = false, features = ["status", "dirwalk"] }

# Channels (crossbeam is more appropriate than tokio::mpsc for sync callbacks)
crossbeam = { workspace = true }

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
tempfile = { workspace = true }
