[package]
name = "wezterm-mux-server-impl"
version = "0.1.0"
authors = ["Wez Furlong <wez@wezfurlong.org>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rustls"]
# Pure-Rust TLS using rustls (recommended)
rustls = ["dep:async_rustls"]
# Legacy OpenSSL-based TLS (deprecated)
openssl = ["dep:async_ossl"]

[dependencies]
anyhow.workspace = true
async-io.workspace = true
codec.workspace = true
config.workspace = true
dns-lookup.workspace = true
futures.workspace = true
hostname.workspace = true
lazy_static.workspace = true
libc.workspace = true
log.workspace = true
mux.workspace = true
portable-pty = { workspace=true, features = ["serde_support"]}
promise.workspace = true
rangeset.workspace = true
rcgen.workspace = true
smol.workspace = true
termwiz = { workspace=true, features=["use_serde"] }
url.workspace = true
wezterm-client.workspace = true
wezterm-term = { workspace=true, features=["use_serde"] }
wezterm-uds.workspace = true

# Pure-Rust TLS (rustls feature)
async_rustls = { workspace = true, optional = true }

# Legacy OpenSSL TLS (openssl feature)
async_ossl = { workspace = true, optional = true }

[target."cfg(windows)".dependencies]
winapi = { workspace=true, features = [ "winuser" ]}
