[package]
name = "wezterm-mux-server"
version = "0.1.0"
authors = ["Wez Furlong <wez@wezfurlong.org>"]
edition = "2018"
resolver = "2"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["rustls"]
# Pure-Rust TLS using rustls (recommended)
rustls = ["dep:async_rustls", "dep:rustls", "dep:rustls-pemfile"]
# Legacy OpenSSL-based TLS (deprecated)
openssl = ["dep:async_ossl", "dep:openssl"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
config.workspace = true
env-bootstrap.workspace = true
libc.workspace = true
log.workspace = true
mux.workspace = true
mlua.workspace = true
portable-pty = { workspace=true, features = ["serde_support"]}
promise.workspace = true
umask.workspace = true
wezterm-blob-leases = {workspace=true, features=["simple_tempdir"]}
wezterm-mux-server-impl.workspace = true
wezterm-gui-subcommands.workspace = true
wezterm-term.workspace = true

# Pure-Rust TLS (rustls feature)
async_rustls = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }

# Legacy OpenSSL TLS (openssl feature)
async_ossl = { workspace = true, optional = true }
openssl = { workspace = true, optional = true }

[target."cfg(windows)".dependencies]
winapi = { workspace=true, features = [ "winuser" ]}

[target.'cfg(windows)'.build-dependencies]
embed-resource.workspace = true
cc.workspace = true
