[package]
name = "wezterm-ssh"
version = "0.4.0"
authors = ["Wez Furlong <wez@wezfurlong.org>"]
edition = "2018"
repository = "https://github.com/wezterm/wezterm"
description = "More convenient higher level wrapper around libssh2"
license = "MIT"
documentation = "https://docs.rs/wezterm-ssh"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Default: russh with ring crypto (best Windows compatibility)
# Set to ["libssh-rs", "ssh2"] to use legacy backends with OpenSSL
default = ["russh"]

# Pure Rust SSH backend (recommended - no C dependencies)
# Uses ring crypto backend for cross-platform compatibility
russh = ["dep:russh", "dep:russh-sftp", "dep:async-trait", "dep:tokio"]

# Legacy backends (require OpenSSL) - DEPRECATED
# These backends are deprecated and will be removed in a future release.
# Use the default russh backend for pure-Rust SSH with no C dependencies.
legacy = ["libssh-rs", "ssh2", "dep:async_ossl"]
vendored-openssl = ["ssh2/vendored-openssl", "libssh-rs/vendored-openssl"]
vendored-openssl-ssh2 = ["ssh2/vendored-openssl"]
vendored-openssl-libssh-rs = ["libssh-rs/vendored-openssl"]

# Test features
docker-tests = []  # Enable Docker-based integration tests

[dependencies]
anyhow.workspace = true
base64 = {workspace = true, features=["std"]}
bitflags.workspace = true
camino.workspace = true
dirs-next.workspace = true
filedescriptor.workspace = true
filenamegen.workspace = true
gethostname.workspace = true
hex = { workspace = true, features = ["std"] }
libc.workspace = true
log.workspace = true
portable-pty.workspace = true
regex.workspace = true
smol.workspace = true
socket2.workspace = true
sha2.workspace = true
thiserror.workspace = true
wezterm-uds.workspace = true

# Pure Rust SSH backend (default)
# Uses ring crypto backend for cross-platform compatibility (Windows, macOS, Linux)
# ring is well-maintained and has good security practices
russh = { version = "0.57", default-features = false, features = ["ring"], optional = true }
russh-sftp = { version = "2.1", optional = true }
async-trait = { workspace = true, optional = true }
tokio = { version = "1", features = ["rt", "net", "sync", "io-util", "time", "macros"], optional = true }

# Legacy SSH backends (require OpenSSL)
libssh-rs = {workspace=true, features=["vendored"], optional = true}
#libssh-rs = {path="../../libssh-rs/libssh-rs", features=["vendored"], optional = true}
ssh2 = {workspace=true, features=["openssl-on-win32"], optional = true}

# Not used directly, but is used to centralize the openssl vendor feature selection
# Only needed with legacy backends
async_ossl = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
passfd.workspace = true

[dev-dependencies]
assert_fs.workspace = true
clap.workspace = true
env_logger.workspace = true
k9.workspace = true
predicates.workspace = true
rstest.workspace = true
shell-words.workspace = true
termwiz.workspace = true
whoami.workspace = true
tokio-test = "0.4"
mockall = "0.13"
tempfile = "3"
test-log = { version = "0.2", features = ["trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
