[package]
name = "wezterm-utils-daemon"
version = "0.1.0"
edition = "2021"
authors = ["David Martel"]
description = "High-performance IPC Router Daemon for WezTerm utilities using Named Pipes and JSON-RPC 2.0"
license = "MIT"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
futures = "0.3"
dashmap = "6.1"
parking_lot = "0.12"
uuid = { version = "1.11", features = ["v4", "serde"] }
dirs = "5.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# Windows Named Pipes support
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.5"
tempfile = "3.14"
chrono = "0.4"

[[bench]]
name = "latency_benchmark"
harness = false