[package]
name = "wezterm-watch"
version = "0.1.0"
edition = "2021"
authors = ["David Martel"]
description = "High-performance file watcher with Git integration for WezTerm"
license = "MIT"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "zip"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-fmt = "tgz"

[lib]
name = "wezterm_watch"
path = "src/lib.rs"

[[bin]]
name = "wezterm-watch"
path = "src/main.rs"

[dependencies]
notify = "6.1"
notify-debouncer-full = "0.3"
gix = { version = "0.68", default-features = false, features = ["status", "revision", "dirwalk"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
crossbeam-channel = "0.5"
colored = "2.1"
ignore = "0.4"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.10"
serial_test = "3.0"